--- a/History.html
+++ b/History.html
@@ -107,7 +107,9 @@
             <h3>CONTACT US</h3>
                <ul>
              <li>Sabo junction Osogbo Osun State</li>
-                <li> Phone:+234 816 413 4980</li>
+                <li><i class="fa fa-phone"> +234 816 413 4980</i></li>
+                <li><i class="fab fa-facebook"></i> Dolapo Moshood Fawole</li>
+                <li><i class="fab fa-twitter"></i> Dolapofawole</li>
             </ul>
          </div>
        
