--- a/Osogboform.html
+++ b/Osogboform.html
@@ -107,33 +107,35 @@
     </div> 
 
 
-    <div class="navone">
-        <h3>QUICK LINK</h3>
-        <ul>
-        <li><a href="Osogboform.html">Registration</a></li>
-       <li> <a href="osocom.html">The Obas</a></li>
-       <li><a href="OnlineReport.html">Whistle blowing</a></li>
-    </ul>
-    </div> 
+    <div class="clear">
+        <div class="navone">
+            <h3>QUICK LINK</h3>
+            <ul>
+            <li><a href="Osogboform.html">Registration</a></li>
+           <li> <a hr ef="osocom.html">The Obas</a></li>
+           <li><a href="OnlineReport.html">Whistle blowing</a></li>
+        </ul>
+        </div> 
 
-    <div class="navone">            
-        <h3> FAQS</h3>
-    <ul>
-     <li><a href="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d126497.
-        047664067!2d4.4704672123058815!3d7.786353603566456!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.
-        1!3m3!1m2!1s0x103787e4c949b8fd%3A0x33c62c1600f59277!2sOsogbo!5e0!3m2!1sen!2sng!4v1626786727499!5m2!1sen!2sng">Where is Osun Park?</a></li>
-        <li><a href="forgetpassword.html">Where do I retrack my account?</a></li>
-        <li><a href="Osogboform.html">Where can I get residence permit?</a></li>
-    </ul>
-        </div>
- 
- <div class="navone">
-    <h3>CONTACT US</h3>
-       <ul>
-     <li>Sabo junction Osogbo Osun State</li>
-        <li> Phone:+234 816 413 4980</li>
-    </ul>
- </div>
+        <div class="navone">            
+            <h3> FAQS</h3>
+        <ul>
+         <li><a href="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d126497.
+            047664067!2d4.4704672123058815!3d7.786353603566456!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.
+            1!3m3!1m2!1s0x103787e4c949b8fd%3A0x33c62c1600f59277!2sOsogbo!5e0!3m2!1sen!2sng!4v1626786727499!5m2!1sen!2sng">Where is Osun Park?</a></li>
+            <li><a href="forgetpassword.html">Where do I retrack my account?</a></li>
+            <li><a href="Osogboform.html">Where can I get residence permit?</a></li>
+        </ul>
+            </div>
+            <div class="navone">
+                <h3>CONTACT US</h3>
+                   <ul>
+                 <li>Sabo junction Osogbo Osun State</li>
+                    <li> <i class="fa fa-phone"> +234 816 413 4980</i></li>
+                    <li><i class="fab fa-facebook"></i> Dolapo Moshood Fawole</li>
+                    <li><i class="fab fa-twitter"></i> Dolapofawole</li>
+                </ul>
+             </div>
  
         
 </body>
