--- a/Osogboform.html
+++ b/Osogboform.html
@@ -26,7 +26,7 @@
  
 
 
-    <p class="cis">
+    <p class="reg-address">
         
         Welcome to <em>Osogbo city registration center</em>. This is aim toward proper documentation of
         all the citizen of Osogbo and for
