--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                         <li><i class="fab fa-facebook"></i> Dolapo Moshood Fawole</li>
                         <li><i class="fab fa-twitter"></i> Dolapofawole</li>
                     </ul>
-                 </div>
+                 </div></div>
     
        
 </body>
