portfolio ready for git push

--- a/OnlineReport.html
+++ b/OnlineReport.html
@@ -9,9 +9,7 @@
 </head>
 
 <style>
-        body{
-            background-color: teal;
-        }
+    
         .forg{
             width: 500px;
             height: 700px;
@@ -23,6 +21,7 @@
             display: block;
             margin: auto;
             text-align: center;
+            color: white;
             
         }
         .report{
