push to git after much fixing

--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@
         </form>
     </div>
 
+    <div class="image">
+        <p>Welcome to Osogbo City Registration Centre (OSOREC)</p>
+        
+        </div>
+
     <div class="ataoja">
     <div class="ata">
         <p> 
